--- a/appinfo.json
+++ b/appinfo.json
@@ -1,27 +1,27 @@
 {
-    "resources": {
-        "media": [
-            {
-                "file": "images/icon_4317.png",
-                "type": "png",
-                "name": "IMAGE_LOGO"
-            }
-        ]
-    },
+    "shortName": "BottlePopperMini",
+    "longName": "BottlePopperMini",
     "capabilities": [
         ""
     ],
-    "uuid": "7e4e1a2d-3676-47a8-9fca-7d64518ff5b4",
-    "shortName": "BottlePopperMini",
-    "versionCode": 1,
-    "companyName": "schmidt.9090@gmail.com",
+    "watchapp": {
+        "watchface": false
+    },
+    "versionLabel": "1.0",
     "appKeys": {
         "message": 1,
         "status": 0
     },
-    "longName": "BottlePopperMini",
-    "versionLabel": "1.0",
-    "watchapp": {
-        "watchface": false
+    "companyName": "schmidt.9090@gmail.com",
+    "versionCode": 1,
+    "uuid": "7e4e1a2d-3676-47a8-9fca-7d64518ff5b4",
+    "resources": {
+        "media": [
+            {
+                "name": "IMAGE_LOGO",
+                "type": "png",
+                "file": "images/icon_4317.png"
+            }
+        ]
     }
 }
